services/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: my-app

spec:
  containers:
    - name: nginx-container
      image: nginx:1.13
      ports:
        - containerPort: 80
